# lola-jedi

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  DISCOVER.md
docs/examples/: converttolatlon.7.5deg.fixed..2023-08-10T00:00:00Z.latlon.modelLevels.nc  hofx3d_c12_converted.yaml  tempo_no2_tropo.20230809T210000Z_small.nc4
src/: CMakeLists.txt
src/lola/: CMakeLists.txt  IOUtils.h  Increment.cc  Increment.h  Model.h  State.cc  State.h  Traits.h
src/lola/executables/: CMakeLists.txt  HofX3D.cc  HofX4D.cc
src/lola/tests/: CMakeLists.txt
src/lola/tests/executables/: CMakeLists.txt  TestGeometry.cc
src/lola/tests/testinput/: geometry.yaml  hofx3d.yaml  hofx3d_geoscf.yaml  hofx3d_merra2.yaml  hofx4d.yaml
